[gd_scene load_steps=3 format=3 uid="uid://c1021hg4v5xlo"]

[ext_resource type="Script" uid="uid://b5125mwvvutf4" path="res://ui/host_menu.gd" id="1_ncrrh"]
[ext_resource type="Script" uid="uid://bsqomyqq8o3i1" path="res://misc/localizer.gd" id="2_c1pb4"]

[node name="HostMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelContainer2"
script = ExtResource("1_ncrrh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "localhost"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
max_value = 10000.0
value = 2555.0

[node name="SpinBox2" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
max_value = 10000.0
value = 2556.0

[node name="SpinBox3" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
max_value = 10000.0
value = 2557.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Localizer" type="Node" parent="."]
script = ExtResource("2_c1pb4")
metadata/_custom_type_script = "uid://bsqomyqq8o3i1"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
